Enhance workspace and layout configurations across multiple files. Added workspace definitions for dual monitors in workspaces.conf, implemented hyprscrolling layout controls in keybinds.conf, and expanded general settings with animations and plugin configurations in general.conf. Updated execs.conf to include a reload command for hyprpm.

--- a/config/hypr/custom/execs.conf
+++ b/config/hypr/custom/execs.conf
@@ -5,3 +5,5 @@ exec-once = fcitx5
 
 # Play login sound
 exec-once = sleep 1 && ~/.config/hypr/custom/scripts/play_sound.sh desktop-login
+
+exec-once = hyprpm reload -n
