--- a/config/hypr/custom/general.conf
+++ b/config/hypr/custom/general.conf
@@ -1,2 +1,51 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
+
+general {
+    layout = scrolling
+    col.active_border = rgba(0a0f12ee) rgba(00ffbbee) rgba(00ffbbee) rgba(0a0f12ee) 60deg
+    col.inactive_border = rgba(0a0f1288) rgba(00ffbb55) rgba(00ffbb55) rgba(0a0f1288) 60deg
+}
+# Hyprscrolling plugin configuration
+plugin {
+    hyprscrolling {
+        column_width = 0.5
+        fullscreen_on_one_column = true
+    }
+}
+
+animations {
+
+    # Bezier curves
+    bezier = easeOutQuart, 0.25, 1, 0.5, 1
+    bezier = easeInOutSine, 0.37, 0, 0.63, 1
+    bezier = modernBounce, 0.18, 0.99, 0, 1.15
+    bezier = easeInOutBack, 0.68, -0.55, 0.27, 1.55
+    bezier = neonPulse, 0.15, 0.85, 0.1, 1.0
+
+    # Border animations
+    animation = border, 1, 3, neonPulse
+    animation = borderangle, 1, 40, neonPulse, loop
+    
+    # Window animations
+    animation = windowsIn, 1, 4, easeOutQuart, slide
+    animation = windowsOut, 1, 3, easeOutQuart, slide
+    animation = windowsMove, 1, 4, easeInOutSine
+
+    # Fade animations
+    animation = fadeIn, 1, 4, easeInOutSine
+    animation = fadeOut, 1, 3, easeInOutSine
+    animation = fadeSwitch, 1, 3, easeInOutSine
+    animation = fadeShadow, 1, 3, easeInOutSine
+    animation = fadeDim, 1, 3, easeInOutSine
+
+    # Workspace animations
+    # animation = workspaces, 1, 4, easeOutQuart, slidefade 70%
+    # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
+
+    # Layer animations
+    animation = layersIn, 1, 4, easeOutQuart, slide
+    animation = layersOut, 1, 3, easeOutQuart, fade
+    animation = fadeLayersIn, 1, 4, easeOutQuart
+    animation = fadeLayersOut, 1, 3, easeOutQuart
+}
