--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -95,18 +95,18 @@ animations {
     bezier = standardDecel, 0, 0, 0, 1
     bezier = menu_decel, 0.1, 1, 0, 1
     bezier = menu_accel, 0.52, 0.03, 0.72, 0.08
-    # Configs
-    # windows
-    animation = windowsIn, 1, 3, emphasizedDecel, popin 80%
-    animation = windowsOut, 1, 2, emphasizedDecel, popin 90%
-    animation = windowsMove, 1, 3, emphasizedDecel, slide
-    animation = border, 1, 10, emphasizedDecel
-    # layers
-    animation = layersIn, 1, 2.7, emphasizedDecel, popin 93%
-    animation = layersOut, 1, 2.4, menu_accel, popin 94%
-    # fade
-    animation = fadeLayersIn, 1, 0.5, menu_decel
-    animation = fadeLayersOut, 1, 2.7, menu_accel
+    # # Configs
+    # # windows
+    # animation = windowsIn, 1, 3, emphasizedDecel, popin 80%
+    # animation = windowsOut, 1, 2, emphasizedDecel, popin 90%
+    # animation = windowsMove, 1, 3, emphasizedDecel, slide
+    # animation = border, 1, 10, emphasizedDecel
+    # # layers
+    # animation = layersIn, 1, 2.7, emphasizedDecel, popin 93%
+    # animation = layersOut, 1, 2.4, menu_accel, popin 94%
+    # # fade
+    # animation = fadeLayersIn, 1, 0.5, menu_decel
+    # animation = fadeLayersOut, 1, 2.7, menu_accel
     # workspaces
     animation = workspaces, 1, 7, menu_decel, slide
     ## specialWorkspace
