--- a/config/hypr/workspaces.conf
+++ b/config/hypr/workspaces.conf
@@ -1,4 +1,28 @@
-# This file is to be overwritten by nwg-displays if you choose to use it.
-# nwg-displays is a graphical tool for managing monitors. 
-# - Installation for Arch Linux: sudo pacman -S nwg-displays
-# - Repo: https://github.com/nwg-piotr/nwg-displays
+# Workspace configuration per monitor
+# Each monitor gets 10 workspaces
+# Main monitor (eDP-1): workspaces 1-10
+# Secondary monitor (HDMI-A-1): workspaces 11-20
+
+# Main monitor (eDP-1) - workspaces 1-10
+workspace = 1, monitor:eDP-1
+workspace = 2, monitor:eDP-1
+workspace = 3, monitor:eDP-1
+workspace = 4, monitor:eDP-1
+workspace = 5, monitor:eDP-1
+workspace = 6, monitor:eDP-1
+workspace = 7, monitor:eDP-1
+workspace = 8, monitor:eDP-1
+workspace = 9, monitor:eDP-1
+workspace = 10, monitor:eDP-1
+
+# Secondary monitor (HDMI-A-1) - workspaces 11-20
+workspace = 11, monitor:HDMI-A-1
+workspace = 12, monitor:HDMI-A-1
+workspace = 13, monitor:HDMI-A-1
+workspace = 14, monitor:HDMI-A-1
+workspace = 15, monitor:HDMI-A-1
+workspace = 16, monitor:HDMI-A-1
+workspace = 17, monitor:HDMI-A-1
+workspace = 18, monitor:HDMI-A-1
+workspace = 19, monitor:HDMI-A-1
+workspace = 20, monitor:HDMI-A-1
