Update theme and color configurations across multiple files. Changed color values in fuzzel_theme.ini, gtk.css, and colors.conf for a cohesive dark theme. Updated gtk-theme-name in settings.ini to Orchis-Teal-Dark. Adjusted Hyprland monitor settings and added XWayland configuration for improved scaling. Modified screenshot commands in keybinds.conf and Recorder.qml for better functionality. Enhanced hyprlock colors and background image for a refreshed look.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -1,6 +1,7 @@
 # MONITOR CONFIG
-monitor = eDP-1, highres@highrr, auto, 1.5
-monitor= HDMI-A-1, highres@highrr, 1920x0, 1
+# HDMI on the left, eDP-1 on the right
+monitor = eDP-1, highres@highrr, 1920x0, 1.5
+monitor = HDMI-A-1, highres@highrr, 0x0, 1
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
@@ -158,6 +159,13 @@ cursor {
     zoom_factor = 1
     zoom_rigid = false
     hotspot_padding = 1
+}
+
+# XWayland configuration
+# force_zero_scaling forces XWayland apps to use integer scaling
+# This can help with font rendering issues in apps like Spotify
+xwayland {
+    force_zero_scaling = true
 }
 
 # Overview
