--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 general {
-    col.active_border = rgba(919191AA)
-    col.inactive_border = rgba(474747AA)
+    col.active_border = rgba(889392AA)
+    col.inactive_border = rgba(3f4948AA)
 }
 
 misc {
-    background_color = rgba(131313FF)
+    background_color = rgba(0e1514FF)
 }
 
 plugin {
@@ -17,16 +17,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(131313FF)
-        col.text = rgba(e2e2e2FF)
+        bar_color = rgba(0e1514FF)
+        col.text = rgba(dde4e3FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(e2e2e2), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(e2e2e2), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(e2e2e2), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(dde4e3), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(dde4e3), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(dde4e3), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(b1c5ffAA) rgba(b1c5ff77),pinned:1
+windowrulev2 = bordercolor rgba(80d5d3AA) rgba(80d5d377),pinned:1
