Enhance notification handling and display in Quickshell. Added support for KDE Connect notifications with specific icons, improved notification summary and body normalization, and refined image loading logic in NotificationAppIcon. Updated NotificationGroup and NotificationItem to utilize new properties for better text handling. Adjusted SDDM theme scaling and lock screen position for improved aesthetics.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -1,7 +1,7 @@
 # MONITOR CONFIG
 # HDMI on the left, eDP-1 on the right
-monitor = eDP-1, highres@highrr, 1920x0, 1.5
-monitor = HDMI-A-1, highres@highrr, 0x0, 1
+monitor = eDP-1, highres@highrr, 1920x0, 1.5, bitdepth, 10, vrr, 2
+monitor = HDMI-A-1, highres@highrr, 0x0, 1, bitdepth, 10, vrr, 2
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
