--- a/config/sddm/SilentSDDM/configs/minecraft.conf
+++ b/config/sddm/SilentSDDM/configs/minecraft.conf
@@ -1,7 +1,7 @@
 ; https://github.com/uiriansan/SilentSDDM/wiki/Customizing
 
 [General]
-scale = 1.3
+scale = 1.8
 enable-animations = true
 animated-background-placeholder = minecraft.png
 background-fill-mode = fill
@@ -21,7 +21,7 @@ saturation = 0.0
 
 [LockScreen.Clock]
 display = true
-position = center-left
+position = center-right
 align = center
 format = hh:mm
 font-family = RedHatDisplay
