Refactor and consolidate Hyprland configuration files. Merged custom environment, execution, general, and keybinds settings into main hyprland configuration files for improved organization. Updated color schemes in fuzzel_theme.ini, gtk.css, and colors.conf for a consistent dark theme. Enhanced workspace and layout controls, including new gestures for hyprscrolling and improved media controls in the bar. Removed obsolete custom scripts and configurations to streamline the setup.

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 general {
-    col.active_border = rgba(889392AA)
-    col.inactive_border = rgba(3f4948AA)
+    col.active_border = rgba(0a0f12ee) rgba(00ffbbee) rgba(00ffbbee) rgba(0a0f12ee) 60deg
+    col.inactive_border = rgba(0a0f1288) rgba(00ffbb55) rgba(00ffbb55) rgba(0a0f1288) 60deg
 }
 
 misc {
-    background_color = rgba(0e1514FF)
+    background_color = rgba(131313FF)
 }
 
 plugin {
@@ -17,16 +17,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0e1514FF)
-        col.text = rgba(dde4e3FF)
+        bar_color = rgba(131313FF)
+        col.text = rgba(e2e2e2FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(dde4e3), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(dde4e3), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(dde4e3), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(e2e2e2), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(e2e2e2), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(e2e2e2), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(80d5d3AA) rgba(80d5d377),pinned:1
+windowrulev2 = bordercolor rgba(4ddad8AA) rgba(4ddad877),pinned:1
