--- a/config/hypr/hyprland/env.conf
+++ b/config/hypr/hyprland/env.conf
@@ -1,19 +1,51 @@
 # ######### Input method ##########
 # See https://fcitx-im.org/wiki/Using_Fcitx_5_on_Wayland
-#env = QT_IM_MODULE, fcitx
-#env = XMODIFIERS, @im=fcitx
-#env = SDL_IM_MODULE, fcitx
-#env = GLFW_IM_MODULE, ibus
-#env = INPUT_METHOD, fcitx
+# Merged from custom/env.conf
+env = GTK_IM_MODULE, fcitx
+env = QT_IM_MODULE, fcitx
+env = XMODIFIERS, @im=fcitx
+env = SDL_IM_MODULE, fcitx
+env = GLFW_IM_MODULE, fcitx
+env = INPUT_METHOD, fcitx
 
 # ############ Wayland #############
 # Set to 'wayland' for better input method (IME) support in Electron apps
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
+# ############ Wine / XWayland #############
+# Giữ font nét cho ứng dụng chạy bằng Wine (XWayland):
+# - FREETYPE_PROPERTIES bật hinting ClearType (v40) để hạn chế blur
+# - WINE_FULLSCREEN_INTEGER_SCALING đảm bảo Wine dùng integer scaling thay vì fractional
+env = FREETYPE_PROPERTIES,truetype:interpreter-version=40
+env = WINE_FULLSCREEN_INTEGER_SCALING,1
+
+# Performance optimizations for Wine
+# Enable DXVK/VKD3D for better graphics performance
+env = DXVK_STATE_CACHE_PATH,$HOME/.cache/dxvk-state-cache
+env = DXVK_LOG_LEVEL,none
+env = VKD3D_SHADER_CACHE_PATH,$HOME/.cache/vkd3d-shader-cache
+
+# Wine performance settings
+env = WINEARCH,win64
+env = WINEPREFIX,$HOME/.wine
+# Reduce Wine overhead
+env = WINEDEBUG,-all
+# Enable Wine's built-in optimizations
+env = WINE_LARGE_ADDRESS_AWARE,1
+# Use native DLLs when possible for better performance
+env = WINEDLLOVERRIDES,winemenubuilder.exe=d
+
+# XWayland performance
+# Force XWayland to use hardware acceleration
+env = XWAYLAND_NO_GLAMOR,0
+
 # ############ Themes #############
 env = QT_QPA_PLATFORM, wayland
 env = QT_QPA_PLATFORMTHEME, kde
 env = XDG_MENU_PREFIX, plasma-
+# Icon & sound themes (merged from custom/env.conf)
+env = GTK_ICON_THEME, Fluent-dark
+env = XDG_SOUND_THEME_PATH, /home/ultimatebrok/.local/share/sounds
 
 # ######## Wayland #########
 # Tearing
