--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -41,8 +41,8 @@ bind = Shift+Super+Alt, Slash, exec, qs -p ~/.config/quickshell/$qsConfig/welcom
 
 bindle=, XF86MonBrightnessUp, exec, qs -c $qsConfig ipc call brightness increment || brightnessctl s 5%+ # [hidden]
 bindle=, XF86MonBrightnessDown, exec, qs -c $qsConfig ipc call brightness decrement || brightnessctl s 5%- # [hidden]
-bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+ -l 1.5 && ~/.config/hypr/custom/scripts/play_sound.sh audio-volume-change# [hidden]
-bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%- && ~/.config/hypr/custom/scripts/play_sound.sh audio-volume-change# [hidden]
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+ -l 1.5 && ~/.config/hypr/hyprland/scripts/play_sound.sh audio-volume-change # [hidden]
+bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%- && ~/.config/hypr/hyprland/scripts/play_sound.sh audio-volume-change # [hidden]
 
 bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle # [hidden]
 bindld = Super+Shift,M, Toggle mute, exec, wpctl set-mute @DEFAULT_SINK@ toggle # [hidden]
@@ -143,9 +143,9 @@ bind = Super+Alt, code:80, exec, ~/.config/hypr/hyprland/scripts/workspace_actio
 bind = Super+Alt, code:81, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh movetoworkspacesilent 9  # [hidden]
 bind = Super+Alt, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh movetoworkspacesilent 10 # [hidden]
 
-# #/# bind = Super+Shift, Scroll ↑/↓,, # Send to workspace left/right
-bind = Super+Shift, mouse_down, movetoworkspace, r-1 # [hidden]
-bind = Super+Shift, mouse_up, movetoworkspace, r+1 # [hidden]
+# #/# bind = Super+Shift, Scroll ↑/↓,, # Hyprscrolling horizontal
+bind = Super+Shift, mouse_down, layoutmsg, move -col # [hidden] Hyprscrolling scroll left
+bind = Super+Shift, mouse_up, layoutmsg, move +col # [hidden] Hyprscrolling scroll right
 bind = Super+Alt, mouse_down, movetoworkspace, -1 # [hidden]
 bind = Super+Alt, mouse_up, movetoworkspace, +1 # [hidden]
 
@@ -187,6 +187,9 @@ bindp = Super, code:80, exec, ~/.config/hypr/hyprland/scripts/workspace_action.s
 bindp = Super, code:81, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 9  # [hidden]
 bindp = Super, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 10 # [hidden]
 
+# Expo overview
+bindd = Super+Shift, E, Toggle expo, hyprexpo:expo, toggle # Toggle expo
+
 #/# bind = Ctrl+Super, ←/→,, # Focus left/right
 bind = Ctrl+Super, Right, workspace, r+1 # [hidden]
 bind = Ctrl+Super, Left, workspace, r-1 # [hidden]
@@ -198,9 +201,9 @@ bind = Super, Page_Down, workspace, +1 # [hidden]
 bind = Super, Page_Up, workspace, -1 # [hidden]
 bind = Ctrl+Super, Page_Down, workspace, r+1 # [hidden]
 bind = Ctrl+Super, Page_Up, workspace, r-1 # [hidden]
-#/# bind = Super, Scroll ↑/↓,, # Focus left/right
-bind = Super, mouse_up, workspace, +1 # [hidden]
-bind = Super, mouse_down, workspace, -1 # [hidden]
+#/# bind = Super, Scroll ↑/↓,, # Focus workspace vertical
+bind = Super, mouse_up, workspace, +1 # [hidden] Workspace up (vertical)
+bind = Super, mouse_down, workspace, -1 # [hidden] Workspace down (vertical)
 bind = Ctrl+Super, mouse_up, workspace, r+1 # [hidden]
 bind = Ctrl+Super, mouse_down, workspace, r-1 # [hidden]
 ## Special
@@ -268,4 +271,52 @@ bind = Ctrl+Shift, Escape, exec, ~/.config/hypr/hyprland/scripts/launch_first_av
 # Cursed stuff
 ## Make window not amogus large
 bind = Ctrl+Super, Backslash, resizeactive, exact 640 480 # [hidden]
+
+#! User
+##! Custom / Hyprscrolling / extra workspaces (merged from custom/keybinds.conf)
+
+# Open shell config
+bind = Ctrl+Super, Slash, exec, xdg-open ~/.config/illogical-impulse/config.json # Edit shell config
+# Open Hyprland keybinds
+bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/hyprland/keybinds.conf # Edit keybinds
+
+##! Hyprscrolling Layout
+# Move layout horizontally (using Y/U to avoid conflicts with Period/Comma)
+bind = Super, Y, layoutmsg, move -col # Move layout left
+bind = Super, U, layoutmsg, move +col # Move layout right
+# Move window to column
+bind = Super+Shift, Y, layoutmsg, movewindowto l # Move window left
+bind = Super+Shift, U, layoutmsg, movewindowto r # Move window right
+bind = Super+Shift, I, layoutmsg, movewindowto u # Move window up
+bind = Super+Shift, O, layoutmsg, movewindowto d # Move window down
+# Additional layout controls
+bind = Super+Alt, Y, layoutmsg, colresize -0.1 # Resize column smaller
+bind = Super+Alt, U, layoutmsg, colresize +0.1 # Resize column larger
+bind = Super+Alt, P, layoutmsg, promote # Promote window to new column
+bind = Super+Alt, I, layoutmsg, togglefit # Toggle fit method
+
+##! Workspace 11-20 (for secondary monitor)
+# Switch to workspace 11-20 (using Ctrl modifier to avoid conflicts with Super+Shift)
+# We use raw keycodes because some keyboard layouts register number keys as different chars
+bind = Ctrl+Super, code:10, workspace, 11 # Switch to workspace 11
+bind = Ctrl+Super, code:11, workspace, 12 # Switch to workspace 12
+bind = Ctrl+Super, code:12, workspace, 13 # Switch to workspace 13
+bind = Ctrl+Super, code:13, workspace, 14 # Switch to workspace 14
+bind = Ctrl+Super, code:14, workspace, 15 # Switch to workspace 15
+bind = Ctrl+Super, code:15, workspace, 16 # Switch to workspace 16
+bind = Ctrl+Super, code:16, workspace, 17 # Switch to workspace 17
+bind = Ctrl+Super, code:17, workspace, 18 # Switch to workspace 18
+bind = Ctrl+Super, code:18, workspace, 19 # Switch to workspace 19
+bind = Ctrl+Super, code:19, workspace, 20 # Switch to workspace 20
+# Move window to workspace 11-20
+bind = Ctrl+Super+Alt, code:10, movetoworkspacesilent, 11 # Move window to workspace 11
+bind = Ctrl+Super+Alt, code:11, movetoworkspacesilent, 12 # Move window to workspace 12
+bind = Ctrl+Super+Alt, code:12, movetoworkspacesilent, 13 # Move window to workspace 13
+bind = Ctrl+Super+Alt, code:13, movetoworkspacesilent, 14 # Move window to workspace 14
+bind = Ctrl+Super+Alt, code:14, movetoworkspacesilent, 15 # Move window to workspace 15
+bind = Ctrl+Super+Alt, code:15, movetoworkspacesilent, 16 # Move window to workspace 16
+bind = Ctrl+Super+Alt, code:16, movetoworkspacesilent, 17 # Move window to workspace 17
+bind = Ctrl+Super+Alt, code:17, movetoworkspacesilent, 18 # Move window to workspace 18
+bind = Ctrl+Super+Alt, code:18, movetoworkspacesilent, 19 # Move window to workspace 19
+bind = Ctrl+Super+Alt, code:19, movetoworkspacesilent, 20 # Move window to workspace 20
 
