--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -13,12 +13,12 @@ source=hyprland/rules.conf
 source=hyprland/colors.conf
 source=hyprland/keybinds.conf
 
-# Custom 
-source=custom/env.conf
-source=custom/execs.conf
-source=custom/general.conf
-source=custom/rules.conf
-source=custom/keybinds.conf
+# Custom (merged into hyprland/*.conf; keep commented as a reference)
+# source=custom/env.conf
+# source=custom/execs.conf
+# source=custom/general.conf
+# source=custom/rules.conf
+# source=custom/keybinds.conf
 
 # nwg-displays support
 source=workspaces.conf
