--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -1,7 +1,7 @@
 # MONITOR CONFIG
 # HDMI on the left, eDP-1 on the right
-monitor = eDP-1, highres@highrr, 1920x0, 1.5, bitdepth, 10, vrr, 2
-monitor = HDMI-A-1, highres@highrr, 0x0, 1, bitdepth, 10, vrr, 2
+monitor = eDP-1, 1920x1200@120, 1920x0, 1, bitdepth, 10, vrr, 2
+monitor = HDMI-A-1, 1920x1080@75, 0x0, 1, bitdepth, 10, vrr, 2
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
@@ -9,9 +9,13 @@ monitor = HDMI-A-1, highres@highrr, 0x0, 1, bitdepth, 10, vrr, 2
 
 gesture = 3, swipe, move,
 gesture = 3, pinch, float
-gesture = 4, horizontal, workspace
-gesture = 4, up, dispatcher, global, quickshell:overviewToggle
-gesture = 4, down, dispatcher, global, quickshell:overviewClose
+
+# 4-finger horizontal: Hyprscrolling layout (move columns)
+gesture = 4, left, dispatcher, layoutmsg, move -col
+gesture = 4, right, dispatcher, layoutmsg, move +col
+
+# 4-finger vertical: workspaces
+gesture = 4, vertical, workspace
 gestures {
     workspace_swipe_distance = 700
     workspace_swipe_cancel_ratio = 0.2
@@ -21,15 +25,15 @@ gestures {
     workspace_swipe_create_new = true
 }
 
+
 general {
+    layout = scrolling
     # Gaps and border
     gaps_in = 4
     gaps_out = 4
     gaps_workspaces = 50
 
-    border_size = 2
-    col.active_border = rgba(0a0f12ee) rgba(00ffbbee) rgba(00ffbbee) rgba(0a0f12ee) 60deg
-    col.inactive_border = rgba(0a0f1288) rgba(00ffbb55) rgba(00ffbb55) rgba(0a0f1288) 60deg
+    border_size = 3
     resize_on_border = true
 
     no_focus_fallback = true
@@ -96,21 +100,48 @@ animations {
     bezier = standardDecel, 0, 0, 0, 1
     bezier = menu_decel, 0.1, 1, 0, 1
     bezier = menu_accel, 0.52, 0.03, 0.72, 0.08
-    # # Configs
-    # # windows
+    # Custom bezier curves
+    bezier = easeOutQuart, 0.25, 1, 0.5, 1
+    bezier = easeInOutSine, 0.37, 0, 0.63, 1
+    bezier = modernBounce, 0.18, 0.99, 0, 1.15
+    bezier = easeInOutBack, 0.68, -0.55, 0.27, 1.55
+    bezier = neonPulse, 0.15, 0.85, 0.1, 1.0
+
+    # Border animations
+    animation = border, 1, 3, neonPulse
+    animation = borderangle, 1, 40, neonPulse, loop
+    
+    # Window animations
     # animation = windowsIn, 1, 3, emphasizedDecel, popin 80%
     # animation = windowsOut, 1, 2, emphasizedDecel, popin 90%
     # animation = windowsMove, 1, 3, emphasizedDecel, slide
     # animation = border, 1, 10, emphasizedDecel
-    # # layers
+    animation = windowsIn, 1, 4, easeOutQuart, slide
+    animation = windowsOut, 1, 3, easeOutQuart, slide
+    animation = windowsMove, 1, 4, easeInOutSine
+
+    # Layer animations
     # animation = layersIn, 1, 2.7, emphasizedDecel, popin 93%
     # animation = layersOut, 1, 2.4, menu_accel, popin 94%
-    # # fade
+    animation = layersIn, 1, 4, easeOutQuart, slide
+    animation = layersOut, 1, 3, easeOutQuart, fade
+    animation = fadeLayersIn, 1, 4, easeOutQuart
+    animation = fadeLayersOut, 1, 3, easeOutQuart
+
+    # Fade animations
     # animation = fadeLayersIn, 1, 0.5, menu_decel
     # animation = fadeLayersOut, 1, 2.7, menu_accel
-    # workspaces
-    animation = workspaces, 1, 7, menu_decel, slide
-    ## specialWorkspace
+    animation = fadeIn, 1, 4, easeInOutSine
+    animation = fadeOut, 1, 3, easeInOutSine
+    animation = fadeSwitch, 1, 3, easeInOutSine
+    animation = fadeShadow, 1, 3, easeInOutSine
+    animation = fadeDim, 1, 3, easeInOutSine
+
+    
+    # Workspace animations
+    animation = workspaces, 1, 4, easeOutQuart, slidefade 70%
+    # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
+    # animation = workspaces, 1, 7, menu_decel, slidevert
     animation = specialWorkspaceIn, 1, 2.8, emphasizedDecel, slidevert
     animation = specialWorkspaceOut, 1, 1.2, emphasizedAccel, slidevert
 }
@@ -164,12 +195,18 @@ cursor {
 # XWayland configuration
 # force_zero_scaling forces XWayland apps to use integer scaling
 # This can help with font rendering issues in apps like Spotify
+# use_nearest_neighbor = true improves performance for pixelated apps/games
 xwayland {
     force_zero_scaling = true
+    use_nearest_neighbor = false
 }
 
 # Overview
 plugin {
+    hyprscrolling {
+        column_width = 0.8
+        fullscreen_on_one_column = true
+    }
     hyprexpo {
         columns = 3
         gap_size = 5
