--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -61,6 +61,11 @@ windowrulev2 = move 40 80, title:^(Copying — Dolphin)$
 # Tiling
 windowrulev2 = tile, class:^dev\.warp\.Warp$
 
+# TradingView (Electron app) – avoid compositor effects that could cause crashes
+windowrulev2 = immediate, class:^(?i)tradingview.*
+windowrulev2 = noblur, class:^(?i)tradingview.*
+windowrulev2 = noshadow, class:^(?i)tradingview.*
+
 # Picture-in-Picture
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrulev2 = keepaspectratio, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
@@ -69,8 +74,25 @@ windowrulev2 = size 25%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrulev2 = pin, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 
-# --- Tearing ---
+# --- Tearing / Performance for Windows apps (Wine/XWayland) ---
+# Enable tearing for .exe files and Wine applications
 windowrulev2 = immediate, title:.*\.exe
+windowrulev2 = immediate, class:^(?i)wine.*
+windowrulev2 = immediate, class:^(?i)wine64.*
+windowrulev2 = immediate, class:^(?i)wine32.*
+windowrulev2 = immediate, xwayland:1
+
+# Disable compositor effects for Wine/XWayland apps (better performance)
+windowrulev2 = noblur, xwayland:1
+windowrulev2 = noshadow, xwayland:1
+windowrulev2 = noanim, xwayland:1
+
+# Specific rules for common Wine window classes (complementary to xwayland rules)
+windowrulev2 = noblur, class:^(?i)wine.*
+windowrulev2 = noshadow, class:^(?i)wine.*
+windowrulev2 = noanim, class:^(?i)wine.*
+
+# Gaming / Performance applications
 windowrulev2 = immediate, title:.*minecraft.*
 windowrulev2 = immediate, class:^(steam_app).*
 
