Update Hyprland configuration files to improve performance and visual consistency. Added GDK scaling environment variables for better DPI handling. Modified workspace animation settings for smoother transitions and adjusted XWayland scaling options to enhance compatibility with Wine applications. Removed animation restrictions for XWayland clients to allow native-like behavior.

--- a/config/hypr/hyprland/env.conf
+++ b/config/hypr/hyprland/env.conf
@@ -35,6 +35,9 @@ env = WINE_LARGE_ADDRESS_AWARE,1
 # Use native DLLs when possible for better performance
 env = WINEDLLOVERRIDES,winemenubuilder.exe=d
 
+env = GDK_SCALE, 1
+env = GDK_DPI_SCALE, 1
+
 # XWayland performance
 # Force XWayland to use hardware acceleration
 env = XWAYLAND_NO_GLAMOR,0
