--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -139,7 +139,7 @@ animations {
 
     
     # Workspace animations
-    animation = workspaces, 1, 4, easeOutQuart, slidefade 70%
+    animation = workspaces, 1, 4, easeOutQuart, slidefadevert 70%
     # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
     # animation = workspaces, 1, 7, menu_decel, slidevert
     animation = specialWorkspaceIn, 1, 2.8, emphasizedDecel, slidevert
@@ -197,7 +197,7 @@ cursor {
 # This can help with font rendering issues in apps like Spotify
 # use_nearest_neighbor = true improves performance for pixelated apps/games
 xwayland {
-    force_zero_scaling = true
+    force_zero_scaling = false
     use_nearest_neighbor = false
 }
 
