--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -85,12 +85,13 @@ windowrulev2 = immediate, xwayland:1
 # Disable compositor effects for Wine/XWayland apps (better performance)
 windowrulev2 = noblur, xwayland:1
 windowrulev2 = noshadow, xwayland:1
-windowrulev2 = noanim, xwayland:1
+# Allow XWayland clients (e.g. Wine apps) to animate like native Wayland ones
+#windowrulev2 = noanim, xwayland:1
 
 # Specific rules for common Wine window classes (complementary to xwayland rules)
-windowrulev2 = noblur, class:^(?i)wine.*
-windowrulev2 = noshadow, class:^(?i)wine.*
-windowrulev2 = noanim, class:^(?i)wine.*
+# windowrulev2 = noblur, class:^(?i)wine.*
+# windowrulev2 = noshadow, class:^(?i)wine.*
+# windowrulev2 = noanim, class:^(?i)wine.*
 
 # Gaming / Performance applications
 windowrulev2 = immediate, title:.*minecraft.*
